nevo logo colsubsidio

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-center col-12 img-logo-col">
-                    <img src="public/images/logo-colsubsidio.svg" alt="Banner">
+                    <img src="public/images/nuevo-logo-colsubsidio" alt="Banner">
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6 text-white pt-4 mt-4 wow fadeInLeft" data-wow-duration="1s"
                     data-wow-delay="0.5s">
